# friday-flask-backend-project

./: main.py  pyproject.toml  requirements.txt
endpoints/: routes.py
