[project]
name = "vercel-flask-starter"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "cloudinary>=1.44.1",
  "dotenv>=0.9.9",
  "flask>=3.1,<4.0",
  "flask-cors>=6.0.1",
  "google-auth>=2.42.1",
  "google-generativeai>=0.8.5",
  "gunicorn~=23.0.0",
  # "openai>=2.3.0",
  # "vercel>=0.3.0",
  "requests>=2.32.5",
  "vercel>=0.3.4",
]
